--- a/wiki/安娜·索罗金.md
+++ b/wiki/安娜·索罗金.md
@@ -11,7 +11,7 @@ class="fn" style="display:inline">
 </div></th>
 </tr>
 &#10;<tr class="odd">
-<th class="infobox-image"><a
+<th colspan="2" class="infobox-image"><a
 href="https://en.wikipedia.org/wiki/File:Anna_Sorokin.jpg"
 class="image"><img
 src="https://upload.wikimedia.chinapedia.org/wikipedia/commons/thumb/e/e8/Anna_Sorokin.jpg/440px-Anna_Sorokin.jpg"
