使用修复后的 pandoc: https://github.com/chinapedia/pandoc

--- a/wiki/安娜·索罗金.md
+++ b/wiki/安娜·索罗金.md
@@ -11,7 +11,7 @@ class="fn" style="display:inline">
 </div></th>
 </tr>
 &#10;<tr class="odd">
-<th colspan="2" class="infobox-image"><a
+<td colspan="2" class="infobox-image"><a
 href="https://en.wiki.chinapedia.org/wiki/File:Anna_Sorokin.jpg"
 class="image"><img
 src="https://upload.wikimedia.chinapedia.org/wikipedia/commons/thumb/e/e8/Anna_Sorokin.jpg/440px-Anna_Sorokin.jpg"
@@ -19,10 +19,10 @@ decoding="async" data-file-width="642" data-file-height="803"
 width="220" height="275" alt="安娜·索罗金.jpg" /></a>
 <div class="infobox-caption">
 Sorokin 的面部照片，2021 年
-</div></th>
+</div></td>
 </tr>
 <tr class="even">
-<th class="infobox-label" scope="row">出生</th>
+<td class="infobox-label" scope="row">出生</td>
 <td class="infobox-data"><span style="display:none">( <span
 class="bday">1991-01-23</span> )</span>1991 年 1 月 23 日<span
 class="noprint ForceAgeToShow">（32 岁）</span><br />
@@ -38,7 +38,7 @@ title="苏联">苏联</a>
 </div></td>
 </tr>
 <tr class="odd">
-<th class="infobox-label" scope="row">其他名称</th>
+<td class="infobox-label" scope="row">其他名称</td>
 <td class="infobox-data nickname"><div class="plainlist">
 <ul>
 <li>安娜·索罗金娜<sup><a href="#cite_note-against-1">[1]</a></sup></li>
@@ -49,47 +49,42 @@ href="#cite_note-against-1">[1]</a></sup></li>
 </div></td>
 </tr>
 <tr class="even">
-<th class="infobox-label" scope="row">国籍</th>
+<td class="infobox-label" scope="row">国籍</td>
 <td class="infobox-data category">苏联 (1991)<br />
 俄语 (1991–2007)<br />
 德语 (2007–现在) <sup><a href="#cite_note-detained-2">[2]</a></sup></td>
 </tr>
 <tr class="odd">
-<th class="infobox-label" scope="row">犯罪状况</th>
+<td class="infobox-label" scope="row">犯罪状况</td>
 <td class="infobox-data category"><a
 href="https://en.wiki.chinapedia.org/wiki/New_York_State_Department_of_Corrections"
 class="mw-redirect" title="纽约州惩教署">NYSDOC</a> #19G0366；2021 年 2
 月从纽约州拘留所获释；目前在美国被软禁。</td>
 </tr>
 <tr class="even">
-<th class="infobox-full-data"></th>
-<td></td>
-</tr>
-<tr class="odd">
-<th class="infobox-label" scope="row"><span class="nowrap"><a
+<td class="infobox-label" scope="row"><span class="nowrap"><a
 href="https://en.wiki.chinapedia.org/wiki/Conviction"
-title="定罪">定罪</a></span></th>
+title="定罪">定罪</a></span></td>
 <td class="infobox-data">2019 年 4 月 25 日<span
 class="noprint">；3年前</span><span style="display:none"> ( <span
 class="bday dtstart published updated">2019-04-25</span> )</span></td>
 </tr>
-<tr class="even">
-<th class="infobox-label" scope="row">刑事指控</th>
+<tr class="odd">
+<td class="infobox-label" scope="row">刑事指控</td>
 <td class="infobox-data"><a
 href="https://en.wiki.chinapedia.org/wiki/Grand_larceny"
 class="mw-redirect" title="重大盗窃罪">大盗窃罪</a>，二级盗窃罪，<a
 href="https://en.wiki.chinapedia.org/wiki/Theft_of_services"
 title="窃取服务">窃取服务</a></td>
 </tr>
-<tr class="odd">
-<th class="infobox-label" scope="row">惩罚</th>
+<tr class="even">
+<td class="infobox-label" scope="row">惩罚</td>
 <td class="infobox-data">4 至 12 年监禁，24,000 美元罚款，199,000
 美元赔偿，<a href="https://en.wiki.chinapedia.org/wiki/Deportation"
 title="递解出境">驱逐</a>回德国</td>
 </tr>
-<tr class="even" style="display:none">
-<th></th>
-<td></td>
+<tr class="odd" style="display:none">
+<td colspan="2"></td>
 </tr>
 </tbody>
 </table>
