删除重复font标签

--- a/wiki/安娜·索罗金.md
+++ b/wiki/安娜·索罗金.md
@@ -484,7 +484,7 @@ Productions](https://en.wiki.chinapedia.org/wiki/Bunim/Murray_Productions "Bunim
 
 ## <span id="Art_shows" class="mw-headline">艺术展</span>
 
-### <span id=".22Free_Anna_Delvey.22_art_show"></span><span class="mw-headline">“释放 Anna Delvey”艺术展</span>
+### <span id=".22Free_Anna_Delvey.22_art_show"></span><span class="mw-headline">“释放安娜”艺术展</span>
 
 *一个节目的谣言首先由 Noah Becker（
 Whitehot*杂志的出版商）发布，他在社交网络服务[Clubhouse上经营 Friday Art
