--- a/wiki/安娜·索罗金.md
+++ b/wiki/安娜·索罗金.md
@@ -97,23 +97,17 @@ class="mw-redirect" title="骗子">骗子</a>和[诈骗犯](https://en.wiki.chin
 设想了一个私人会员俱乐部和艺术基金会，其中包括租用一栋大型建筑来开设<a href="https://en.wiki.chinapedia.org/wiki/Pop-up_shop"
 class="mw-redirect" title="快闪店">快闪店</a>以及她在实习期间遇到的著名艺术家的展览。她后来制作了虚假的财务文件来证实她拥有数百万欧元信托基金的说法，并伪造了多份电汇确认书。索罗金使用这些文件以及欺诈性支票诱骗银行、熟人和房地产经纪人支付现金并发放大额无抵押贷款。她用这笔钱来资助她奢侈的生活方式，包括在多家高档酒店居住。2013年至2017年间，索罗金诈骗骗取各大金融机构、银行、酒店和个人共计27.5万美元。
 
-2017年，[纽约警察局](https://en.wiki.chinapedia.org/wiki/New_York_City_Police_Department "纽约市警察局")在她的朋友[雷切尔·德洛奇·威廉姆斯
-(Rachel DeLoache
-Williams)](https://en.wiki.chinapedia.org/wiki/Rachel_DeLoache_Williams "Rachel DeLoache Williams")的帮助下，在一次[诱捕行动](https://en.wiki.chinapedia.org/wiki/Sting_operation "卧底行动")中逮捕了索罗金，后者指控索罗金诈骗了她62,000美元。2019年，索罗金在纽约州法院被判犯有<a href="https://en.wiki.chinapedia.org/wiki/Grand_larceny"
-class="mw-redirect" title="Grand larceny">重大盗窃罪</a>未遂、二级盗窃罪和[盗窃服务罪](https://en.wiki.chinapedia.org/wiki/Theft_of_services "Theft of services")，被判处4至12年有期徒刑。服刑两年后，她被[美国移民和海关执法局](https://en.wiki.chinapedia.org/wiki/U.S._Immigration_and_Customs_Enforcement "U.S. Immigration and Customs Enforcement")关押，准备遣返德国。2022
-年 10 月 5 日，索罗金获得 10,000
-美元的保释金并出狱。<sup>[\[3\]](#cite_note-Reul-3)</sup>自 2022 年 10
-月起，索罗金必须在电子监控下进行 24
+2017年，[纽约警察局](https://en.wiki.chinapedia.org/wiki/New_York_City_Police_Department "纽约市警察局")在她的朋友[雷切尔·德洛奇·威廉姆斯](https://en.wiki.chinapedia.org/wiki/Rachel_DeLoache_Williams "Rachel DeLoache Williams")的帮助下，在一次[诱捕行动](https://en.wiki.chinapedia.org/wiki/Sting_operation "卧底行动")中逮捕了索罗金，后者指控索罗金诈骗了她62,000美元。2019年，索罗金在纽约州法院被判犯有<a href="https://en.wiki.chinapedia.org/wiki/Grand_larceny"
+class="mw-redirect" title="Grand larceny">重大盗窃罪</a>未遂、二级盗窃罪和[盗窃服务罪](https://en.wiki.chinapedia.org/wiki/Theft_of_services "Theft of services")，被判处4至12年有期徒刑。服刑两年后，她被[美国移民和海关执法局](https://en.wiki.chinapedia.org/wiki/U.S._Immigration_and_Customs_Enforcement "U.S. Immigration and Customs Enforcement")关押，准备遣返德国。2022年10月5日，索罗金获得
+10,000 美元的保释金并出狱。<sup>[\[3\]](#cite_note-Reul-3)</sup>自 2022
+年 10 月起，索罗金必须在电子监控下进行 24
 小时居家隔离，并且不得使用社交媒体。<sup>[\[3\]](#cite_note-Reul-3)</sup>
 
 2018
 年，威廉姆斯在[*《名利场》*](https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine) "Vanity Fair (magazine)")杂志上写了一篇关于她与索罗金的经历的长篇文章<sup>[\[4\]](#cite_note-4)</sup>，索罗金的故事得到了公众的关注。她在
 2019
-年出版的*《我的朋友安娜》*一书中进一步阐述了这个故事。同年，记者[杰西卡普莱斯勒为](https://en.wiki.chinapedia.org/wiki/Jessica_Pressler "Jessica Pressler")*[纽约](https://en.wiki.chinapedia.org/wiki/New_York_(magazine) "New York (magazine)")*写了一篇关于索罗金社交名媛生活的文章；<sup>[\[5\]](#cite_note-5)</sup>
-[Netflix](https://en.wiki.chinapedia.org/wiki/Netflix "Netflix")向索罗金支付了
-320,000 美元以获得她故事的版权，并将其开发成 2022
-年的迷你剧《*[发明安娜》](https://en.wiki.chinapedia.org/wiki/Inventing_Anna "Inventing Anna")*。索罗金的人生故事一直是其他多个电视节目、访谈、播客和戏剧作品的主题。[](https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine) "名利场（杂志）")[](https://en.wiki.chinapedia.org/wiki/Jessica_Pressler "杰西卡·普莱斯勒")*[](https://en.wiki.chinapedia.org/wiki/New_York_(magazine) "纽约（杂志）")*<sup>[](#cite_note-5)</sup>
-[](https://en.wiki.chinapedia.org/wiki/Netflix "网飞")*[](https://en.wiki.chinapedia.org/wiki/Inventing_Anna "发明安娜")*
+年出版的《我的朋友安娜》一书中进一步阐述了这个故事。同年，记者[杰西卡·普莱斯勒](https://en.wiki.chinapedia.org/wiki/Jessica_Pressler "Jessica Pressler")为*[纽约](https://en.wiki.chinapedia.org/wiki/New_York_(magazine) "New York (magazine)")*杂志写了一篇关于索罗金社交名媛生活的文章；<sup>[\[5\]](#cite_note-5)</sup>
+[Netflix](https://en.wiki.chinapedia.org/wiki/Netflix "Netflix")向索罗金支付了320,000美元以获得她故事的版权，并将其开发成2022年的迷你剧《*[创造安娜](https://en.wiki.chinapedia.org/wiki/Inventing_Anna "Inventing Anna")*》。索罗金的人生故事一直是其他多个电视节目、访谈、播客和戏剧作品的主题。
 
 ## <span id="Early_life" class="mw-headline">早年生活</span><span class="mw-editsection"></span>
 
