--- a/wiki/安娜·索罗金.md
+++ b/wiki/安娜·索罗金.md
@@ -43,7 +43,7 @@ title="多莫杰多沃（镇）">多莫杰多沃</a>
 <li>安娜·索罗金娜<sup><a href="#cite_note-against-1">[1]</a></sup></li>
 <li>安娜·索罗金-德尔维<sup><a
 href="#cite_note-against-1">[1]</a></sup></li>
-<li>安娜德尔维<sup><a href="#cite_note-against-1">[1]</a></sup></li>
+<li>安娜·德尔维<sup><a href="#cite_note-against-1">[1]</a></sup></li>
 </ul>
 </div></td>
 </tr>
@@ -87,7 +87,7 @@ title="递解出境">驱逐</a>回德国</td>
 
 **安娜·索罗金**（[俄语](https://en.wiki.chinapedia.org/wiki/Russian_language "俄语")：<span lang="ru">Анна
 Сорокина</span>；1991 年 1 月 23
-日出生），又名安娜·**德尔维**，是一名<a href="https://en.wiki.chinapedia.org/wiki/Con_artist"
+日出生），又名**安娜·德尔维**，是一名<a href="https://en.wiki.chinapedia.org/wiki/Con_artist"
 class="mw-redirect" title="骗子">骗子</a>和[诈骗犯](https://en.wiki.chinapedia.org/wiki/Fraud "欺诈罪")，在
 2013 年至 2017
 年间冒充富有的[女继承人](https://en.wiki.chinapedia.org/wiki/Inheritance "遗产")进入纽约社交和艺术界的上流社会.
@@ -131,14 +131,12 @@ class="mw-redirect" title="Maiden name">婚前姓氏</a>。然而，索罗金的
 
 ## <span id="Fraud" class="mw-headline">欺诈</span>
 
-2013年年中，索罗金前往[纽约市](https://en.wiki.chinapedia.org/wiki/New_York_City "纽约市")参加[纽约时装周](https://en.wiki.chinapedia.org/wiki/New_York_Fashion_Week "纽约时装周")。她发现在纽约比在巴黎更容易交到朋友，所以她选择留下来，并调到Purple<span class="nowrap"
-style="padding-left:0.1em;">的</span>纽约办公室短暂停留。<sup>[\[9\]](#cite_note-Conned-9)</sup>退出Purple后，索罗金提出了“Anna
-Delvey
-Foundation”（私人会员俱乐部和艺术基金会）的想法，但未能成功地从该市社交界的富有成员那里寻求资金。她的提议包括租用整个[教堂传教士之家](https://en.wiki.chinapedia.org/wiki/Church_Missions_House "教会布道所")，包括六层楼和
-45,000 平方英尺（4,200 米<sup>2</sup>），由[Aby
-Rosen所有](https://en.wiki.chinapedia.org/wiki/Aby_Rosen "阿比·罗森")的
-RFR
-Holdings，作为一个多功能活动场所和艺术工作室，她在那里规划了一个[视觉艺术](https://en.wiki.chinapedia.org/wiki/Visual_arts "视觉艺术")中心，里面有由艺术家[Daniel
+2013年年中，索罗金前往[纽约市](https://en.wiki.chinapedia.org/wiki/New_York_City "纽约市")参加[纽约时装周](https://en.wiki.chinapedia.org/wiki/New_York_Fashion_Week "纽约时装周")。她发现在纽约比在巴黎更容易交到朋友，所以她选择留下来，并调到Purple的纽约办公室短暂停留。<sup>[\[9\]](#cite_note-Conned-9)</sup>离开Purple后，索罗金提出了“安娜·德尔维基金会”（私人会员俱乐部和艺术基金会）的想法，但未能成功地从该市社交界的富有成员那里寻求资金。她的提议包括租用整个[Church
+Missions
+House](https://en.wiki.chinapedia.org/wiki/Church_Missions_House "教会布道所")，包括六层楼和
+45,000 平方英尺（4,200 平方米），由[Aby
+Rosen](https://en.wiki.chinapedia.org/wiki/Aby_Rosen "阿比·罗森")的 RFR
+Holdings公司拥有，作为一个多功能活动场所和艺术工作室，她在那里规划了一个[视觉艺术](https://en.wiki.chinapedia.org/wiki/Visual_arts "视觉艺术")中心，里面有由艺术家[Daniel
 Arsham策划的](https://en.wiki.chinapedia.org/wiki/Daniel_Arsham "Daniel Arsham")<a href="https://en.wiki.chinapedia.org/wiki/Pop-up_shop"
 class="mw-redirect" title="快闪店">快闪店</a>，她的实习熟人之一，以及[Urs
 Fischer](https://en.wiki.chinapedia.org/wiki/Urs_Fischer "Urs Fischer")和[Damien
@@ -463,7 +461,7 @@ Productions](https://en.wiki.chinapedia.org/wiki/Bunim/Murray_Productions "Bunim
 一个节目的谣言首先由 Noah Becker（
 Whitehot杂志的出版商）发布，他在社交网络服务[Clubhouse上经营 Friday Art
 Gossip](https://en.wiki.chinapedia.org/wiki/Clubhouse_(app) "Clubhouse (app)")[房间](https://en.wiki.chinapedia.org/wiki/Clubhouse_(app)#Rooms "会所（应用程序）")。<sup>[\[64\]](#cite_note-Peers-64)</sup>
-2022年3月17日至3月24日，在索罗金仍在监禁期间，她参加了一个名为“释放安娜德尔维”的快闪群展，其中有五幅复制画作。<sup>[\[65\]](#cite_note-show_announcement-65)</sup>该节目融合了
+2022年3月17日至3月24日，在索罗金仍在监禁期间，她参加了一个名为“释放安娜·德尔维”的快闪群展，其中有五幅复制画作。<sup>[\[65\]](#cite_note-show_announcement-65)</sup>该节目融合了
 33
 位受索罗金启发的艺术家的艺术作品，其中包括贝克尔。<sup>[\[66\]](#cite_note-pop_up_details-66)</sup>该节目由阿尔弗雷多·马丁内斯
 (Alfredo Martinez) 和朱莉娅·莫里森 (Alfredo Martinez)
@@ -485,7 +483,7 @@ Grunge表示该节目“通常以同情的方式展示
 \[Sorokin\]，如果不是公开积极的，轻松的”
 <sup>[\[71\]](#cite_note-Grunge-71)</sup>
 
-### <span id=".22Allegedly.22_art_show"></span><span class="mw-headline">“据称”艺术展</span>
+### <span class="mw-headline">“据称”艺术展</span>
 
 2022 年 4 月上旬，Founders Art Club 的 Chris Martine
 以她的艺术代表索罗金，宣布了即将举行的展览。宣布后，[ARTnews](https://en.wiki.chinapedia.org/wiki/ARTnews "艺术新闻")表示“兴趣高得离谱”。<sup>[\[65\]](#cite_note-show_announcement-65)</sup>
@@ -774,8 +772,8 @@ class="mw-redirect" title="茱莉亚·福克斯（演员）"></a><sup>[](#cite_n
     日）。</span><span class="reference-text"><span class="cs1-lock-limited"
     title="Free access subject to limited trial, subscription normally required"><a
     href="https://www.nytimes.com/2019/04/28/nyregion/anna-sorokin-delvey-trial.html"
-    class="external text" rel="nofollow">“安娜德尔维，假女继承人：她受审的 7
-    个离奇亮点”</a></span></span><span class="reference-text">。</span><span class="reference-text">[纽约时报](https://en.wiki.chinapedia.org/wiki/The_New_York_Times "The New York Times")</span><span class="reference-text">。</span><span class="reference-text">原始</span><span class="reference-text"><a
+    class="external text" rel="nofollow">“安娜·德尔维，假女继承人：她受审的
+    7 个离奇亮点”</a></span></span><span class="reference-text">。</span><span class="reference-text">[纽约时报](https://en.wiki.chinapedia.org/wiki/The_New_York_Times "The New York Times")</span><span class="reference-text">。</span><span class="reference-text">原始</span><span class="reference-text"><a
     href="https://web.archive.org/web/20210603151334/https://www.nytimes.com/2019/04/28/nyregion/anna-sorokin-delvey-trial.html"
     class="external text" rel="nofollow">存档</a></span><span class="reference-text">
     <span class="cs1-lock-limited"
@@ -1078,7 +1076,7 @@ class="mw-redirect" title="茱莉亚·福克斯（演员）"></a><sup>[](#cite_n
     日）。</span><span class="reference-text"><a
     href="https://www.insider.com/fake-heiress-refused-to-show-up-to-court-because-of-her-outfit-2019-3"
     class="external text"
-    rel="nofollow">“据称‘名媛骗子’安娜德尔维周五拒绝出庭，因为她不喜欢自己的着装”</a></span><span class="reference-text">。</span><span class="reference-text"><a href="https://en.wiki.chinapedia.org/wiki/Insider_(news_website)"
+    rel="nofollow">“据称‘名媛骗子’安娜·德尔维周五拒绝出庭，因为她不喜欢自己的着装”</a></span><span class="reference-text">。</span><span class="reference-text"><a href="https://en.wiki.chinapedia.org/wiki/Insider_(news_website)"
     class="mw-redirect" title="Insider（新闻网站）">知情人</a></span><span class="reference-text">。</span><span class="reference-text">原始</span><span class="reference-text"><a
     href="https://web.archive.org/web/20220127130939/https://www.insider.com/fake-heiress-refused-to-show-up-to-court-because-of-her-outfit-2019-3"
     class="external text" rel="nofollow">存档于 2022 年 1 月 27 日</a></span><span class="reference-text"><span class="reference-accessdate">。</span></span><span class="reference-text"><span class="reference-accessdate">2021
@@ -1291,7 +1289,7 @@ class="mw-redirect" title="茱莉亚·福克斯（演员）"></a><sup>[](#cite_n
     </span> <span class="reference-text"><a
     href="https://www.insider.com/anna-delvey-writes-about-inventing-anna-and-life-in-jail-2022-2"
     class="external text" rel="nofollow">“消除安娜：从 ICE
-    拘留中，安娜德尔维谈论她的新 Netflix 节目和监狱生活”</a></span><span class="reference-text">。</span><span class="reference-text"><a href="https://en.wiki.chinapedia.org/wiki/Insider_(news_website)"
+    拘留中，安娜·德尔维谈论她的新 Netflix 节目和监狱生活”</a></span><span class="reference-text">。</span><span class="reference-text"><a href="https://en.wiki.chinapedia.org/wiki/Insider_(news_website)"
     class="mw-redirect" title="Insider (news website)">知情人</a></span><span class="reference-text">。</span><span class="reference-text">2022
     年 2 月 2
     日。</span><span class="reference-text">原始</span><span class="reference-text"><a
@@ -1410,7 +1408,7 @@ class="mw-redirect" title="茱莉亚·福克斯（演员）"></a><sup>[](#cite_n
     日）。</span><span class="reference-text"><span class="cs1-lock-limited"
     title="Free access subject to limited trial, subscription normally required"><a
     href="https://www.nytimes.com/2019/07/23/books/review/my-friend-anna-rachel-deloache-williams.html"
-    class="external text" rel="nofollow">“真实生活：我被安娜德尔维骗了”</a></span></span><span class="reference-text">。</span><span class="reference-text">[纽约时报](https://en.wiki.chinapedia.org/wiki/The_New_York_Times "The New York Times")</span><span class="reference-text">。</span><span class="reference-text">原始</span><span class="reference-text"><a
+    class="external text" rel="nofollow">“真实生活：我被安娜·德尔维骗了”</a></span></span><span class="reference-text">。</span><span class="reference-text">[纽约时报](https://en.wiki.chinapedia.org/wiki/The_New_York_Times "The New York Times")</span><span class="reference-text">。</span><span class="reference-text">原始</span><span class="reference-text"><a
     href="https://web.archive.org/web/20210603152807/https://www.nytimes.com/2019/07/23/books/review/my-friend-anna-rachel-deloache-williams.html"
     class="external text" rel="nofollow">存档于 2021 年 6 月 3 日。</a></span><span class="reference-text">
     <span class="cs1-lock-limited"
@@ -1535,7 +1533,7 @@ class="mw-redirect" title="茱莉亚·福克斯（演员）"></a><sup>[](#cite_n
     日）。</span><span class="reference-text"><a
     href="https://www.refinery29.com/en-gb/2020/07/9919721/pepper-smith-katy-keene-based-on-anna-delvey-real-story"
     class="external text"
-    rel="nofollow">“胡椒史密斯是凯蒂基恩的安娜德尔维”</a></span><span class="reference-text">。</span><span class="reference-text">[炼油厂](https://en.wiki.chinapedia.org/wiki/Refinery29 "Refinery29")</span><span class="reference-text">29.com</span><span class="reference-text">。</span><span class="reference-text">原始</span><span class="reference-text"><a
+    rel="nofollow">“胡椒史密斯是凯蒂基恩的安娜·德尔维”</a></span><span class="reference-text">。</span><span class="reference-text">[炼油厂](https://en.wiki.chinapedia.org/wiki/Refinery29 "Refinery29")</span><span class="reference-text">29.com</span><span class="reference-text">。</span><span class="reference-text">原始</span><span class="reference-text"><a
     href="https://web.archive.org/web/20220227125609/https://www.refinery29.com/en-gb/2020/07/9919721/pepper-smith-katy-keene-based-on-anna-delvey-real-story"
     class="external text" rel="nofollow">存档于 2022 年 2 月 27 日</a></span><span class="reference-text"><span class="reference-accessdate">。</span></span><span class="reference-text"><span class="reference-accessdate">2022
     年</span></span><span class="reference-text"><span class="reference-accessdate"><span class="nowrap">2
@@ -1604,7 +1602,7 @@ class="mw-redirect" title="茱莉亚·福克斯（演员）"></a><sup>[](#cite_n
     日）。</span><span class="reference-text"><a
     href="https://www.townandcountrymag.com/leisure/arts-and-culture/a39106680/anna-delvey-docuseries-reality-tv/"
     class="external text"
-    rel="nofollow">“有一部安娜德尔维真人秀节目正在制作中”</a></span><span class="reference-text">。</span><span class="reference-text">[城镇与乡村](https://en.wiki.chinapedia.org/wiki/Town_%26_Country_(magazine) "城镇与乡村（杂志）")</span><span class="reference-text">。</span><span class="reference-text">原始</span><span class="reference-text"><a
+    rel="nofollow">“有一部安娜·德尔维真人秀节目正在制作中”</a></span><span class="reference-text">。</span><span class="reference-text">[城镇与乡村](https://en.wiki.chinapedia.org/wiki/Town_%26_Country_(magazine) "城镇与乡村（杂志）")</span><span class="reference-text">。</span><span class="reference-text">原始</span><span class="reference-text"><a
     href="https://web.archive.org/web/20220217083001/https://www.townandcountrymag.com/leisure/arts-and-culture/a39106680/anna-delvey-docuseries-reality-tv/"
     class="external text" rel="nofollow">存档于 2022 年 2 月 17 日</a></span><span class="reference-text"><span class="reference-accessdate">。</span></span><span class="reference-text"><span class="reference-accessdate">2022
     年</span></span><span class="reference-text"><span class="reference-accessdate"><span class="nowrap">2
@@ -1703,7 +1701,7 @@ class="mw-redirect" title="茱莉亚·福克斯（演员）"></a><sup>[](#cite_n
     日）。</span><span class="reference-text"><a
     href="https://www.insider.com/anna-sorokin-hired-art-forger-prison-free-anna-delvey-gallery-2022-3"
     class="external text"
-    rel="nofollow">“在‘​​释放安娜德尔维’的开幕式中，假女继承人雇佣了一个臭名昭著的艺术伪造者来重现她的监狱画作”</a></span><span class="reference-text">。</span><span class="reference-text">商业内幕</span><span class="reference-text"><span class="reference-accessdate">。</span></span><span class="reference-text"><span class="reference-accessdate">2022
+    rel="nofollow">“在‘​​释放安娜·德尔维’的开幕式中，假女继承人雇佣了一个臭名昭著的艺术伪造者来重现她的监狱画作”</a></span><span class="reference-text">。</span><span class="reference-text">商业内幕</span><span class="reference-text"><span class="reference-accessdate">。</span></span><span class="reference-text"><span class="reference-accessdate">2022
     年</span></span><span class="reference-text"><span class="reference-accessdate"><span class="nowrap">5
     月 26
     日</span></span></span><span class="reference-text"><span class="reference-accessdate">检索</span></span><span class="reference-text">。</span><span class="reference-text">
@@ -1821,7 +1819,7 @@ class="mw-redirect" title="茱莉亚·福克斯（演员）"></a><sup>[](#cite_n
     日）。</span><span class="reference-text"><a
     href="https://www.artnews.com/art-news/news/anna-delvey-allegedly-review-art-show-exhibit-1234629718/"
     class="external text"
-    rel="nofollow">“安娜德尔维最大的骗局可能是她的艺术展”</a></span><span class="reference-text">。</span><span class="reference-text">艺术新闻</span><span class="reference-text"><span class="reference-accessdate">。</span></span><span class="reference-text"><span class="reference-accessdate">2022
+    rel="nofollow">“安娜·德尔维最大的骗局可能是她的艺术展”</a></span><span class="reference-text">。</span><span class="reference-text">艺术新闻</span><span class="reference-text"><span class="reference-accessdate">。</span></span><span class="reference-text"><span class="reference-accessdate">2022
     年</span></span><span class="reference-text"><span class="reference-accessdate"><span class="nowrap">5
     月 26
     日</span></span></span><span class="reference-text"><span class="reference-accessdate">检索</span></span><span class="reference-text">。</span><span class="reference-text">
