手动修复链接，基于deepl改进中文翻译

--- a/wiki/安娜·索罗金.md
+++ b/wiki/安娜·索罗金.md
@@ -151,86 +151,57 @@ DJ Elle Dee
 Dee 将索罗金描述为“有权势且刻薄——尤其是对服务员”。Dee
 还描述了索罗金如何依靠她和其他熟人来支付她的费用，声称她忘记了她的钱包，或者这是紧急情况，她的信用卡无法使用。这些费用从酒吧的饮料到酒店住宿，<sup>[\[14\]](#cite_note-14)</sup>
 
-2015年，索罗金在一次晚宴上结识了艺术收藏家、[宾夕法尼亚大学](https://en.wiki.chinapedia.org/wiki/University_of_Pennsylvania "宾夕法尼亚大学")学生[黄旭福。](https://en.wiki.chinapedia.org/wiki/Michael_Xufu_Huang "黄旭福")得知黄打算参加[威尼斯双年展](https://en.wiki.chinapedia.org/wiki/Venice_Biennale "威尼斯双年展")，索罗金问他是否可以陪同。Huang
-同意并为 索罗金预订了机票和酒店房间，条件是他将报销 2,000 至 3,000
-美元的费用。回到纽约后，索罗金似乎“忘记”了这个安排，没有付款。<sup>[\[13\]](#cite_note-Museum-13)</sup>黄最初认为索罗金只是<a href="https://en.wiki.chinapedia.org/wiki/Absent-minded"
+2015年，索罗金在一次晚宴上结识了艺术收藏家、[宾夕法尼亚大学](https://en.wiki.chinapedia.org/wiki/University_of_Pennsylvania "宾夕法尼亚大学")学生[黄勖夫。](https://en.wiki.chinapedia.org/wiki/Michael_Xufu_Huang "黄勖夫")得知黄打算参加[威尼斯双年展](https://en.wiki.chinapedia.org/wiki/Venice_Biennale "威尼斯双年展")，索罗金问他是否可以陪同。黄同意并为
+索罗金预订了机票和酒店房间，条件是他要报销2,000至3,000美元的费用。回到纽约后，索罗金似乎“忘记”了这个安排，没有付款。<sup>[\[13\]](#cite_note-Museum-13)</sup>黄最初认为索罗金只是<a href="https://en.wiki.chinapedia.org/wiki/Absent-minded"
 class="mw-redirect" title="恍惚">心不在焉</a>。同样在2015年，索罗金参加了<a href="https://en.wiki.chinapedia.org/wiki/Miami_Beach"
-class="mw-redirect" title="Miami Beach">迈阿密海滩</a>的[巴塞尔艺术展](https://en.wiki.chinapedia.org/wiki/Art_Basel "巴塞尔艺术展")<a href="https://en.wiki.chinapedia.org/wiki/Miami_Beach"
-class="mw-redirect" title="迈阿密滩"></a>. 2016 年 1
-月，索罗金聘请了一家公关公司在萨黛尔的餐厅为自己预订生日派对；在她的信用卡被拒绝并且黄在活动中的照片被发布在社交媒体上后，餐厅工作人员询问黄是否有索罗金的联系方式。这时，Huang
-对 Sorokin
-产生了怀疑，还注意到她奇怪地总是用现金付款，而且住在旅馆而不是公寓。<sup>[\[7\]](#cite_note-Tricked-7)</sup>他最终得到了偿还，但是是从一个陌生名字的[Venmo](https://en.wiki.chinapedia.org/wiki/Venmo "文墨")账户中偿还的。然后他阻止了索罗金在社交媒体上与他的联系，结束了他们的友谊。<sup>[\[13\]](#cite_note-Museum-13)</sup>
+class="mw-redirect" title="Miami Beach">迈阿密海滩</a>的[巴塞尔艺术展](https://en.wiki.chinapedia.org/wiki/Art_Basel "巴塞尔艺术展").
+2016年1月，索罗金聘请了一家公关公司在萨黛尔的餐厅为自己预订生日派对；在她的信用卡被拒绝并且黄在活动中的照片被发布在社交媒体上后，餐厅工作人员询问黄是否有索罗金的联系方式。这时黄对索罗金产生了怀疑，还注意到她奇怪地总是用现金付款，而且住在旅馆而不是公寓。<sup>[\[7\]](#cite_note-Tricked-7)</sup>他最终拿到了钱，但是是从一个陌生的[Venmo](https://en.wiki.chinapedia.org/wiki/Venmo "文墨")账户来的。然后他在社交媒体上拉黑了索罗金，断绝往来。<sup>[\[13\]](#cite_note-Museum-13)</sup>
 
 2016 年 2
 月，当索罗金住在标准高线公园的酒店房间时，她在一家夜总会认识了当时在[名利场](https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine) "Vanity Fair (magazine)")担任图片编辑的[雷切尔·德洛奇·威廉姆斯
 (Rachel DeLoache Williams)
-。](https://en.wiki.chinapedia.org/wiki/Rachel_DeLoache_Williams "雷切尔·德洛奇·威廉姆斯")威廉姆斯形容索罗金“对服务员要求苛刻且粗鲁”，并表示“当电梯打开时，她不会等其他人下车”。尽管如此，威廉姆斯还是与索罗金成为了密友，并在后来帮助她被捕。<sup>[\[15\]](#cite_note-shepaid-15)</sup>[](https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine) "名利场（杂志）")<sup>[](#cite_note-shepaid-15)</sup>
+。](https://en.wiki.chinapedia.org/wiki/Rachel_DeLoache_Williams "雷切尔·德洛奇·威廉姆斯")威廉姆斯形容索罗金“对服务员要求苛刻且粗鲁”，并表示“当电梯打开时，她不会等其他人先下”。尽管如此，威廉姆斯还是与索罗金成为了密友，并在后来协助逮捕索罗金。<sup>[\[15\]](#cite_note-shepaid-15)</sup>
 
 索罗金使用[Microsoft
-Word](https://en.wiki.chinapedia.org/wiki/Microsoft_Word "微软Word")创建虚假的银行对账单和其他财务文件，声称她在瑞士银行账户中拥有
-6000 万欧元，但无法访问这些账户，因为这些账户是受信任的，而且她在美国
-\[7\] \[11\] <sup>[\[](#cite_note-Tricked-7)</sup>
-<sup>[9](#cite_note-2years-11)</sup> <sup>[\]
-\]](#cite_note-Conned-9)</sup> 索罗金的一位熟人帮她联系了 Gibson Dunn
-的律师 Andrew Lance \[
-[16](https://en.wiki.chinapedia.org/wiki/Gibson_Dunn "Gibson Dunn")
-<sup>[\]](#cite_note-16)</sup>，后者又让她联系了几家大型金融机构，包括[City
+Word](https://en.wiki.chinapedia.org/wiki/Microsoft_Word "微软Word")创建虚假的银行对账单和其他财务文件，声称她在瑞士银行账户中拥有6000万欧元，但由于这些账户是托管的，而且她在美国，所以无法进入这些账户。<sup>[\[7\]](#cite_note-Tricked-7)[\[11\]](#cite_note-2years-11)[\[9\]](#cite_note-Conned-9)</sup>索罗金的一位熟人帮她联系了[Gibson
+Dunn](https://en.wiki.chinapedia.org/wiki/Gibson_Dunn "Gibson Dunn")的律师
+Andrew
+Lance<sup>[\[16\]](#cite_note-16)</sup>，后者又让她联系了几家大型金融机构，包括[City
 National
-Bank](https://en.wiki.chinapedia.org/wiki/City_National_Bank_(California) "City National Bank (California)")和[Fortress
+银行](https://en.wiki.chinapedia.org/wiki/City_National_Bank_(California) "City National Bank (California)")和[Fortress
 Investment
 Group](https://en.wiki.chinapedia.org/wiki/Fortress_Investment_Group "Fortress Investment Group")。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
-2016 年 11 月，索罗金向 City National 提交了虚假文件，作为 2200
-万美元贷款申请的一部分。<sup>[\[17\]](#cite_note-Guilty-17)</sup>[](https://en.wiki.chinapedia.org/wiki/Gibson_Dunn "吉布森邓恩")[](https://en.wiki.chinapedia.org/wiki/City_National_Bank_(California) "城市国家银行（加利福尼亚州）")[](https://en.wiki.chinapedia.org/wiki/Fortress_Investment_Group "丰泽投资集团")<sup>[](#cite_note-Tricked-7)[](#cite_note-Guilty-17)</sup>由于索罗金未能提供瑞士资产的来源，City
-National 拒绝提供信贷，她随后向 Fortress 申请贷款。如果 索罗金支付
-100,000 美元支付与该申请相关的法律费用，Fortress 同意考虑该申请。2016 年
-12 月，由于索罗金无力支付租金，[Church Missions
-House](https://en.wiki.chinapedia.org/wiki/Church_Missions_House "教会布道所")转而租给了[Fotografiska
-New
-York](https://en.wiki.chinapedia.org/wiki/Fotografiska_New_York "纽约摄影")。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
+2016 年 11 月，索罗金向 City National
+提交了虚假文件，作为2200万美元贷款申请的部分材料。<sup>[\[17\]](#cite_note-Guilty-17)</sup>由于索罗金未能提供瑞士资产的来源，City
+National 银行拒绝提供信贷，她随后向 Fortress
+申请贷款。如果索罗金支付100,000美元支付与该申请相关的法律费用，Fortress
+同意考虑该申请。2016 年 12 月，由于索罗金无力支付租金，[Church Missions
+House](https://en.wiki.chinapedia.org/wiki/Church_Missions_House "教会布道所")转而租给了[Fotografiska纽约博物馆](https://en.wiki.chinapedia.org/wiki/Fotografiska_New_York "纽约摄影")。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
 
-2017 年 1 月 12 日，索罗金说服 City National 向她提供 100,000
-美元的临时透支额度，并承诺会及时偿还。索罗金提供了一个不存在的业务经理“Peter
-Hennecke”的虚假[AOL电子邮件地址；](https://en.wiki.chinapedia.org/wiki/AOL "美国在线")当怀疑出现时，索罗金声称他已经死了，然后发明了一个新的角色，“贝蒂娜·瓦格纳”。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
-<sup>[\[17\]](#cite_note-Guilty-17)</sup>检察官后来在她的审判中表明，她曾使用[谷歌](https://en.wiki.chinapedia.org/wiki/Google_Search "谷歌搜索")查询“创建虚假的无法追踪的电子邮件”。<sup>[\[11\]](#cite_note-2years-11)</sup>索罗金将
-100,000 美元汇给 Fortress 用于贷款申请，但 Fortress 的一位董事总经理对
-Sorokin
-的申请产生了怀疑，因为她的文书工作存在差异——例如，她声称自己有德国血统，但她的护照显示她出生在俄罗斯。当董事安排与她在瑞士的银行家会面以核实索罗金的资产时，她撤回了贷款申请以防止进一步审查。[2017
-年 2
-月，作为尽职调查](https://en.wiki.chinapedia.org/wiki/Due_diligence "尽职调查")程序的一部分，Fortress
-未花费的透支部分 55,000
-美元被退还给索罗金。<sup>[\[17\]](#cite_note-Guilty-17)</sup>
-<sup>[\[7\]](#cite_note-Tricked-7)</sup>索罗金随后在奢侈服装、电子产品和[私人教练](https://en.wiki.chinapedia.org/wiki/Personal_trainer "私人教练")以及
-800
-美元的[美发](https://en.wiki.chinapedia.org/wiki/Hair_highlighting "头发高光")和
-400
-美元上大手大脚[睫毛延伸](https://en.wiki.chinapedia.org/wiki/Eyelash_extensions "睫毛延长")。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
+2017 年 1 月 12 日，索罗金说服 City National
+银行向她提供100,000美元的临时透支额度，并承诺会及时偿还。索罗金提供了一个不存在的业务经理“Peter
+Hennecke”的虚假[AOL](https://en.wiki.chinapedia.org/wiki/AOL "美国在线")电子邮件地址；当怀疑出现时，索罗金声称他已经死了，然后发明了一个新的角色，“贝蒂娜·瓦格纳”。<sup>[\[7\]](#cite_note-Tricked-7)[\[17\]](#cite_note-Guilty-17)</sup>检察官后来在她的审判中表明，她曾使用[谷歌](https://en.wiki.chinapedia.org/wiki/Google_Search "谷歌搜索")查询“创建虚假的无法追踪的电子邮件”。<sup>[\[11\]](#cite_note-2years-11)</sup>索罗金将100,000美元汇给
+Fortress 用于贷款申请，但 Fortress
+的一位董事总经理对索罗金的申请产生了怀疑，因为她的申请材料存在漏洞：例如，她声称自己有德国血统，但她的护照显示她出生在俄罗斯。当董事安排与她在瑞士的银行家会面以核实索罗金的资产时，她撤回了贷款申请以防止进一步审查。2017年2月，作为[尽职调查](https://en.wiki.chinapedia.org/wiki/Due_diligence "尽职调查")程序的一部分，Fortress将申请费未花费55,000美元退还给索罗金。<sup>[\[17\]](#cite_note-Guilty-17)</sup>
+<sup>[\[7\]](#cite_note-Tricked-7)</sup>索罗金随后在奢侈服装、电子产品和[私人教练](https://en.wiki.chinapedia.org/wiki/Personal_trainer "私人教练")以及800美元的[美发](https://en.wiki.chinapedia.org/wiki/Hair_highlighting "头发高光")和400美元上大手大脚[睫毛延伸](https://en.wiki.chinapedia.org/wiki/Eyelash_extensions "睫毛延长")。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
 
 2017年2月18日，索罗金入住了位于<a href="https://en.wiki.chinapedia.org/wiki/Soho,_Manhattan"
-class="mw-redirect" title="苏活区，曼哈顿">曼哈顿Soho</a>区的11
+class="mw-redirect" title="苏豪区，曼哈顿">曼哈顿苏豪区</a>的11
 Howard酒店400美元/晚的房间。<sup>[\[7\]](#cite_note-Tricked-7)</sup>[她经常给礼宾部](https://en.wiki.chinapedia.org/wiki/Concierge "门房")100
 美元的现金小费，她结识了礼宾部和其他员工，以完成简单的任务，例如餐厅推荐或将包裹送到她的房间。<sup>[\[7\]](#cite_note-Tricked-7)</sup>尽管如此，大多数员工还是觉得索罗金很烦人，并将她的评论描述为不礼貌和阶级歧视。<sup>[\[7\]](#cite_note-Tricked-7)</sup>索罗金在旅馆里变得很舒服，经常穿着紧身裤或旅馆长袍四处走动，经常在旅馆餐厅[Le
-Coucou用餐，索罗金在那里结识了厨师](https://en.wiki.chinapedia.org/wiki/Le_Coucou_(restaurant) "Le Coucou（餐厅）")[丹尼尔罗斯](https://en.wiki.chinapedia.org/wiki/Daniel_Rose_(chef) "丹尼尔·罗斯（主厨）")<sup>[\[15\]](#cite_note-shepaid-15)</sup>并将餐费记在她的房间里。<sup>[\[7\]](#cite_note-Tricked-7)</sup>她为门房提供按摩、美甲服务，并与名人私人教练[Kacy
+Coucou用餐，索罗金在那里结识了厨师](https://en.wiki.chinapedia.org/wiki/Le_Coucou_(restaurant) "Le Coucou（餐厅）")[丹尼尔罗斯](https://en.wiki.chinapedia.org/wiki/Daniel_Rose_(chef) "丹尼尔·罗斯（主厨）")<sup>[\[15\]](#cite_note-shepaid-15)</sup>并将餐费记在她的房间里。<sup>[\[7\]](#cite_note-Tricked-7)</sup>她为门房安排按摩、美甲服务，并与知名私人教练[Kacy
 Duke](https://en.wiki.chinapedia.org/wiki/Kacy_Duke "凯西公爵")进行会谈。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
 
-在管理人员发现索罗金没有登记信用卡后，他们坚持要她结清 30,000
-美元的账单。索罗金将一箱 1975 年的[Dom
-Pérignon](https://en.wiki.chinapedia.org/wiki/Dom_P%C3%A9rignon "唐培里侬")香槟送给员工，试图让他们站在她这边；酒店政策禁止工作人员接受礼物。<sup>[\[7\]](#cite_note-Tricked-7)</sup>到
-2017 年 3 月，在收到贷款申请费剩余的 55,000
-美元一个月后，由于挥霍无度，Sorokin
-的钱已经花光了。然后她会提议带朋友出去喝酒和吃饭，但到了付账的时候，她会声称她忘记了信用卡，或者她的信用卡无法使用。<sup>[\[17\]](#cite_note-Guilty-17)</sup>此时，索罗金在纽约社交圈非常活跃；她参加了她认识的晚宴[Macaulay
+在管理人员发现索罗金没有登记信用卡后，他们坚持要她结清30,000美元的账单。索罗金将一箱1975年的[Dom
+Pérignon](https://en.wiki.chinapedia.org/wiki/Dom_P%C3%A9rignon "唐培里侬")香槟送给员工，试图让他们站在她这边；酒店政策禁止工作人员接受礼物。<sup>[\[7\]](#cite_note-Tricked-7)</sup>到2017年3月，在收到贷款申请费剩余的55,000美元一个月后，由于挥霍无度，索罗金的钱已经花光了。然后她会提议带朋友出去喝酒和吃饭，但到了付账的时候，她会声称她忘记了信用卡，或者她的信用卡无法使用。<sup>[\[17\]](#cite_note-Guilty-17)</sup>此时，索罗金在纽约社交圈非常活跃；她参加了她认识的晚宴[Macaulay
 Culkin](https://en.wiki.chinapedia.org/wiki/Macaulay_Culkin "麦考利克金")和[Martin
 Shkreli](https://en.wiki.chinapedia.org/wiki/Martin_Shkreli "马丁·什克雷利")。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
 
-2017 年 4 月，索罗金将价值 160,000
-美元的欺诈性支票存入[花旗银行](https://en.wiki.chinapedia.org/wiki/Citibank "花旗银行")账户，她从中取回了
-70,000 美元。<sup>[\[1\]](#cite_note-against-1)</sup>然后她将 30,000
-美元电汇给 11 Howard
+2017年4月，索罗金将价值160,000美元的欺诈性支票存入[花旗银行](https://en.wiki.chinapedia.org/wiki/Citibank "花旗银行")账户，她从中取回了70,000美元。<sup>[\[1\]](#cite_note-against-1)</sup>然后她将
+30,000 美元电汇给 11 Howard
 以支付未付账单。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
 
-2017 年 5
-月，索罗金通过伪造[德意志银行的](https://en.wiki.chinapedia.org/wiki/Deutsche_Bank "Deutsche Bank")[电汇确认](https://en.wiki.chinapedia.org/wiki/Wire_transfer "电汇")书并支付
-35,390
-美元的费用，预订了经[布拉德](https://en.wiki.chinapedia.org/wiki/Blade_(company) "Blade (company)")飞往[内布拉斯加州奥马哈](https://en.wiki.chinapedia.org/wiki/Omaha,_Nebraska "Omaha, Nebraska")的公务机往返包机，参加[伯克希尔哈撒韦公司](https://en.wiki.chinapedia.org/wiki/Berkshire_Hathaway "Berkshire Hathaway")的年会，目的是会见[沃伦巴菲特](https://en.wiki.chinapedia.org/wiki/Warren_Buffett "Warren Buffett")。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
+2017年5月，索罗金通过发送一份伪造的[德意志银行](https://en.wiki.chinapedia.org/wiki/Deutsche_Bank "Deutsche Bank")的[电汇](https://en.wiki.chinapedia.org/wiki/Wire_transfer "电汇")确认书，以支付35,390美元的费用，预订了经[布拉德](https://en.wiki.chinapedia.org/wiki/Blade_(company) "Blade (company)")飞往[内布拉斯加州奥马哈](https://en.wiki.chinapedia.org/wiki/Omaha,_Nebraska "Omaha, Nebraska")的公务机往返包机，参加[伯克希尔哈撒韦公司](https://en.wiki.chinapedia.org/wiki/Berkshire_Hathaway "Berkshire Hathaway")的年会，目的是会见[沃伦巴菲特](https://en.wiki.chinapedia.org/wiki/Warren_Buffett "Warren Buffett")。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
 <sup>[\[18\]](#cite_note-Managed-18)</sup>据称索罗金会见了 Blade
 首席执行官[罗伯特·维森塔尔](https://en.wiki.chinapedia.org/wiki/Robert_S._Wiesenthal "Robert S. Wiesenthal")，尽管维森塔尔后来说他根本不认识她。<sup>[\[7\]](#cite_note-Tricked-7)</sup>
 Blade 在多次不付款后于 2017 年 8
