--- a/wiki/短信.md
+++ b/wiki/短信.md
@@ -1,9 +1,15 @@
 # 维基百科条目
 [短信](https://zh.wiki.chinapedia.org/zh-cn/%E7%B0%A1%E8%A8%8A)
 
-# 在线收码服务
-目前 Google 搜索 "Online SMS" 首页的结果，大多数都无法正常收码。可能是机器生产的虚假信息，也可能是手机号被网站屏蔽。
+# 在线收短信服务
+简称接码平台。目前 Google 搜索 "Online SMS" 首页的结果，大多数都无法正常收码。可能是机器生产的虚假信息，也可能是手机号被网站屏蔽。
 
-经过测试能正常收码的网页：
-* https://azrotv.com/extras/sms-verification/messages.php?id=3320
+经过测试能正常收码的免费网站：
+* https://azrotv.com/
 
+付费接码网站一般需要选择服务项目，以保证客户购买的手机号不会被占用：
+* [qisms](https://s.beijingxi.net/qisms)
+
+# 在线发短信服务
+
+* twilio: https://www.twilio.com/.
