--- a/wiki/AzerothCore/教程/修改服务器配置.md
+++ b/wiki/AzerothCore/教程/修改服务器配置.md
@@ -1,5 +1,5 @@
 
-# 1 把配置从Docker里复制出来
+# 修改服务器配置
 进入 `acore-docker` 目录，打开终端，输入以下命令。
 ```shell
 docker compose cp ac-worldserver:/azerothcore/env/dist/etc/authserver.conf conf
@@ -9,7 +9,7 @@ docker compose cp ac-worldserver:/azerothcore/env/dist/etc/dbimport.conf conf
 
 这时进到 `acore-docker/conf` 目录，会多出3个文件，这些就是我们后面要修改的配置文件。
 
-# 2 增加 docker-compose.override.yml 文件
+# 增加 docker-compose.override.yml 文件
 在 `acore-docker` 目录下，创建一个 `docker-compose.override.yml` 文件，内容如下：
 ```yaml
 version: '3.9'
@@ -22,7 +22,7 @@ services:
       - ./conf/dbimport.conf:/azerothcore/env/dist/etc/dbimport.conf
 ```
 
-# 3 修改配置
+# 修改配置
 根据自己的需求修改配置文件。
 
 官方文档（英文）：
@@ -32,7 +32,7 @@ services:
 中文文档：
 * [worldserver.conf](../doc/worldserver.conf.md)
 
-# 4 删除旧容器，重新启动新容器
+# 删除旧容器，重新启动新容器
 1. 进到 `acore-docker` 目录
 2. 执行以下命令
 ```
