--- a/wiki/缅甸/刘阿宝.md
+++ b/wiki/缅甸/刘阿宝.md
@@ -9,4 +9,4 @@
 刘阿宝与缅甸中央政府的关系一直比较紧密，他曾多次出席缅甸国家级的会议和活动，与缅甸总统、总理等高层领导人有过接触 。他也是果敢自治区政府与缅甸军方的重要联络人，曾参与过多次的和平谈判和协调工作 。他的影响力不仅局限于果敢地区，还涉及到缅甸其他的少数民族地区，如克钦邦、掸邦等 。
 
 ## 近况变化
-刘阿宝的近况发生了重大变化，据说他在2023年初因为健康原因辞去了果敢自治区副主席的职务，但仍然担任果敢自治区政府顾问，继续参与果敢地区的政治和经济事务 。然而，在2023年11月5日，他却突然发布了一份通知，宣布关闭自己的电信诈骗园区，并释放了所有员工。这一举动被认为是他向缅甸政府和国际社会投递的“投名状”，表明他不再支持或参与电信诈骗等非法活动，而是愿意与缅甸政府合作，维护果敢地区的和平与稳定。据悉，刘阿宝的这一决定也受到了果敢地区其他家族的支持，他们也纷纷表示将严厉打击和彻底清理“电诈”。
+据说刘阿宝在2023年初因为健康原因辞去了果敢自治区副主席的职务，但仍然担任果敢自治区政府顾问，继续参与果敢地区的政治和经济事务 。然而，在2023年11月5日，他却突然发布了一份通知，宣布关闭自己的电信诈骗园区，并释放了所有员工。这一举动被认为是他向缅甸政府和国际社会投递的“投名状”，表明他不再支持或参与电信诈骗等非法活动，而是愿意与缅甸政府合作，维护果敢地区的和平与稳定。据悉，刘阿宝的这一决定也受到了果敢地区其他家族的支持，他们也纷纷表示将严厉打击和彻底清理“电诈”。
